--- a/public/views/dashboard.html
+++ b/public/views/dashboard.html
@@ -1,4 +1,7 @@
-<h1>Dashboard</h1>
-<img ng-src="{{currentUser.profilePictureUrl}}" />
-{{currentUser.firstName}}
-{{currentUser.lastName}}
+<sidebar></sidebar>
+
+<dashnav></dashnav>
+
+<main class="dashboard">
+  <h1>Dashboard</h1>
+</main>
