--- a/public/views/home.html
+++ b/public/views/home.html
@@ -3,7 +3,7 @@
   <div class="welcome">
     <h1>Welcome to MatchFlick</h1>
     <h4>MatchFlick is the best way to recommend a movie for your movie night! Sign up for an account to let MatchFlick know what movies you like.</h4>
-    <a href="/auth/facebook"><button type="button">Login</button></a>
-    <a href="/auth/facebook"><button type="button">Sign Up</button></a>
+    <a href="/auth/facebook"><button class="default" type="button">Login</button></a>
+    <a href="/auth/facebook"><button class="default" type="button">Sign Up</button></a>
   </div>
 </main>
