--- a/public/views/dashboard.html
+++ b/public/views/dashboard.html
@@ -3,5 +3,44 @@
 <dashnav></dashnav>
 
 <main class="dashboard">
-  <h1>Dashboard</h1>
+  <h1 style="margin-bottom:20px;">Dashboard</h1>
+  <!-- <button ng-click="getUserGenrePrefs()">Get Genre Prefs</button> -->
+  <ul>
+
+  <button ng-click="discoverForMatch()" style="color:black;">1</button>
+  <button ng-click="getMoviesFromDiscover()" style="color:black;">2</button>
+
+    <!-- <h2>Genres</h2>
+    <li ng-repeat="genrePref in userGenrePrefs">{{genrePref.genreName}} - {{genrePref.genreTotalScore}}</li>
+  </ul>
+
+  <ul>
+    <h2>Actors</h2>
+    <li ng-repeat="actorPref in userActorPrefs">{{actorPref.actorName}} - {{actorPref.actorTotalScore}}</li>
+  </ul>
+
+  <ul>
+    <h2>Directors</h2>
+    <li ng-repeat="directorPref in userDirectorPrefs">{{directorPref.directorName}} - {{directorPref.directorTotalScore}}</li>
+  </ul>
+
+  <ul>
+    <h2>Producers</h2>
+    <li ng-repeat="producerPref in userProducerPrefs">{{producerPref.producerName}} - {{producerPref.producerTotalScore}}</li>
+  </ul>
+
+  <ul>
+    <h2>Writers</h2>
+    <li ng-repeat="writerPref in userWriterPrefs">{{writerPref.writerName}} - {{writerPref.writerTotalScore}}</li>
+  </ul>
+
+  <ul>
+    <h2>Keywords</h2>
+    <li ng-repeat="keywordPref in userKeywordPrefs">{{keywordPref.keywordName}} - {{keywordPref.keywordTotalScore}}</li>
+  </ul>
+
+  <ul>
+    <h2>Decades</h2>
+    <li ng-repeat="decadePref in userDecadePrefs">{{decadePref.decadeName}} - {{decadePref.decadeTotalScore}}</li>
+  </ul> -->
 </main>
