--- a/public/views/directives/sidebar.html
+++ b/public/views/directives/sidebar.html
@@ -1,11 +1,10 @@
 <div class="logo-cont">
   <img class="logo" src="../images/matchflick-logo-v2-300x48-white.png" alt="" />
 </div>
-
-<ul>
-  <li><a class="active"><span class="glyphicon glyphicon-dashboard" aria-hidden="true"></span>Dashboard</a></li>
-  <li><a><span class="match"><img class="match" src="../images/favicon.png" /></span> Match</a></li>
-  <li><a><span class="glyphicon glyphicon-search" aria-hidden="true"></span>Recommendations</a></li>
-  <li><a><span class="glyphicon glyphicon-heart-empty" aria-hidden="true"></span>My Favorites</a></li>
-  <li><a><span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span>Watchlist</a></li>
+<ul id="sidebar">
+  <li><a id="dashboard" ui-sref="dashboard"><span class="glyphicon glyphicon-dashboard" aria-hidden="true"></span>Dashboard</a></li>
+  <li><a id="match" ui-sref="match"><span class="match"><img class="match" src="../images/favicon.png" /></span> Match</a></li>
+  <li><a id="recommendations" ui-sref="recommendations"><span class="glyphicon glyphicon-search" aria-hidden="true"></span>Recommendations</a></li>
+  <li><a id="favorites" ui-sref="favorites"><span class="glyphicon glyphicon-heart-empty" aria-hidden="true"></span>My Favorites</a></li>
+  <li><a id="watchlist" ui-sref="watchlist"><span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span>Watchlist</a></li>
 </ul>
