--- a/public/views/watchlist.html
+++ b/public/views/watchlist.html
@@ -5,8 +5,8 @@
 <main class="dashboard">
   <h1>My Watchlist</h1>
   <ul class="watchlist">
-    <li ng-repeat="movie in watchlist">
-      <img movie-details ng-src="{{movie.posterUrl}}" />
+    <li watchlist-details class="movie-poster" ng-repeat="movie in watchlist">
+      <img ng-src="{{movie.posterUrl}}" />
       <span class="overlay"><span show-movie-details class="glyphicon glyphicon-info-sign movie-details" aria-hidden="true"></span></span>
     </li>
   </ul>
