--- a/public/css/main.css
+++ b/public/css/main.css
@@ -376,6 +376,20 @@ div.movie-poster span.overlay {
   padding-top: 250px;
 }
 
+li.movie-poster span.overlay {
+  position: absolute;
+  margin: auto;
+  left: 0px;
+  right: 0px;
+  top: 0px;
+  bottom: 0px;
+  font-size: 50px;
+  background-color: rgba(0,0,0,.4);
+  visibility: hidden;
+  text-align: center;
+  padding-top: 120px;
+}
+
 span.movie-details {
   transition: .2s ease all;
 }
@@ -664,4 +678,55 @@ ul.watchlist {
 
 ul.watchlist img {
   width: 200px;
+}
+
+li.movie-poster {
+  display: inline-block;
+  margin: 20px;
+  position: relative;
+}
+
+main.center {
+  height: 100vh;
+  width: calc(100vw - 220px);
+  float: right;
+  padding: 20px;
+  display: table;
+}
+
+div.genres-wrapper {
+  display: table-cell;
+  vertical-align: middle;
+  text-align: center;
+  position: relative;;
+}
+
+div.genres-wrapper h1 {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+div.genre {
+  display: inline-block;
+  background-color: #1F1F1F;
+  padding: 35px 0;
+  margin: 10px;
+  text-align: center;
+  width: 175px;
+  transition: .2s ease all;
+}
+
+div.genre:hover {
+  background-color: #282828;
+  transform: scale(1.1);
+  cursor: pointer;
+}
+
+.genre-selected{
+background-color: #FC7100 !important;
+}
+
+div.genres-wrapper button.recommend {
+  padding: 16px 30px;
+  margin-top: 20px;
 }
