--- a/public/views/dashboard.html
+++ b/public/views/dashboard.html
@@ -9,6 +9,7 @@
 
   <button ng-click="discoverForMatch()" style="color:black;">1</button>
   <button ng-click="getMoviesFromDiscover()" style="color:black;">2</button>
+  <button ng-click="removePorn()" style="color:black;">Remove Porn</button>
 
     <!-- <h2>Genres</h2>
     <li ng-repeat="genrePref in userGenrePrefs">{{genrePref.genreName}} - {{genrePref.genreTotalScore}}</li>
