--- a/public/views/dashboard.html
+++ b/public/views/dashboard.html
@@ -7,9 +7,9 @@
   <!-- <button ng-click="getUserGenrePrefs()">Get Genre Prefs</button> -->
   <ul>
 
-  <button ng-click="discoverForMatch()" style="color:black;">1</button>
+  <!-- <button ng-click="discoverForMatch()" style="color:black;">1</button>
   <button ng-click="getMoviesFromDiscover()" style="color:black;">2</button>
-  <button ng-click="removePorn()" style="color:black;">Remove Porn</button>
+  <button ng-click="removePorn()" style="color:black;">Remove Porn</button> -->
 
     <!-- <h2>Genres</h2>
     <li ng-repeat="genrePref in userGenrePrefs">{{genrePref.genreName}} - {{genrePref.genreTotalScore}}</li>
