--- a/public/views/directives/dashnav.html
+++ b/public/views/directives/dashnav.html
@@ -1,3 +1,6 @@
+<div class="logo-cont">
+  <img class="logo" src="../images/matchflick-logo-v2-300x48-white.png" alt="" />
+</div>
 <div class="user-info">
   <img class="profile" ng-src="{{currentUser._json.picture.data.url}}" />
   <p>
