--- a/public/views/recommendations/categories.html
+++ b/public/views/recommendations/categories.html
@@ -43,4 +43,9 @@
     </div>
     <a><button class="default recommend" type="button" ng-disabled="hasOne" ng-click="getRecommendationsByGenre()">Recommend Movies</button></a>
   </div>
+
+  <div class="loading" ng-show="loading">
+    <img src="../../images/spin.gif" alt="" />
+  </div>
+
 </main>
