--- a/public/css/main.css
+++ b/public/css/main.css
@@ -50,7 +50,7 @@ button:disabled {
 
 button:focus, input:focus {outline:0;}
 
-ui-view, navbar, sidebar, dashnav, fav-search-results {
+ui-view, navbar, sidebar, dashnav, fav-search-results, movie-details-rec {
   display: block;
 }
 
@@ -100,6 +100,7 @@ sidebar {
   height: 100vh;
   position: fixed;
   background-color: #282828;
+  padding-top:60px;
 }
 
 sidebar img.logo {
@@ -147,12 +148,13 @@ sidebar > ul > li > a.active {
 }
 
 dashnav {
-  width: calc(100% - 220px);
+  width: 100vw;
   position: fixed;
   top: 0;
   right: 0;
   padding: 10px;
-  /*background-color: rgba(0, 0, 0, 0.5);*/
+  background-color: #101010;
+  z-index: 999;
 }
 
 div.user-info img.profile {
@@ -175,7 +177,7 @@ div.user-info {
 main.dashboard {
   width: calc(100% - 220px);
   float: right;
-  padding: 20px;
+  padding: 80px 20px 20px;
 }
 
 section.dashboard-header {
@@ -346,6 +348,12 @@ div.rating-cont span.not-seen {
   left: 13px;
   font-size: 20px;
   color: #929292;
+  transition: .2s ease all;
+}
+
+div.rating-cont span.not-seen:hover {
+  color: #FC7100;
+  transform: scale(1.2);
 }
 
 div.rating-cont span.watchlist {
@@ -354,6 +362,12 @@ div.rating-cont span.watchlist {
   right: 13px;
   font-size: 20px;
   color: #929292;
+  transition: .2s ease all;
+}
+
+div.rating-cont span.watchlist:hover {
+  color: #FC7100;
+  transform: scale(1.2);
 }
 
 div.match-cont div.movie-poster {
@@ -390,6 +404,20 @@ li.movie-poster span.overlay {
   padding-top: 120px;
 }
 
+ul.recommended-movies > li > span.overlay {
+  position: absolute;
+  margin: auto;
+  left: 0px;
+  right: 0px;
+  top: 0px;
+  bottom: 0px;
+  font-size: 50px;
+  background-color: rgba(0,0,0,.4);
+  visibility: hidden;
+  text-align: center;
+  padding-top: 160px;
+}
+
 span.movie-details {
   transition: .2s ease all;
 }
@@ -408,6 +436,7 @@ div.movie-details {
   background-color: #282828;
   padding: 25px;
   overflow: hidden;
+  z-index: 999;
 }
 
 div.movie-details span.close-details {
@@ -636,7 +665,7 @@ img.rt-logo {
 
 main.my-favorites {
   width: calc(100% - 220px);
-  padding: 20px;
+  padding: 80px 20px 20px;
   float: right;
 }
 
@@ -692,13 +721,15 @@ main.center {
   float: right;
   padding: 20px;
   display: table;
+  position: relative;
 }
 
 div.genres-wrapper {
   display: table-cell;
   vertical-align: middle;
   text-align: center;
-  position: relative;;
+  position: relative;
+  padding: 0 5%;
 }
 
 div.genres-wrapper h1 {
@@ -729,4 +760,161 @@ background-color: #FC7100 !important;
 div.genres-wrapper button.recommend {
   padding: 16px 30px;
   margin-top: 20px;
+}
+
+div.loading {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  margin: auto;
+  background-color: rgba(0,0,0,.5);
+}
+
+div.loading > img {
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  margin: auto;
+  position: absolute;
+}
+
+ul.recommended-movies {
+  margin-top: 20px;
+}
+
+ul.recommended-movies > li {
+  display: inline-block;
+  margin: 20px;
+  position: relative;
+}
+
+ul.recommended-movies > li > img {
+  width: 250px;
+}
+
+ul.rec-rating-cont {
+  position: absolute;
+  bottom: 5px;
+  left: 0;
+  right: 0;
+  margin-bottom: 5px !important;
+}
+
+ul.rec-rating-cont > a > span {
+  font-size: 30px;
+  position: absolute;
+  top: 0;
+}
+
+ul.rec-rating-cont > li > a > img {
+  width: 22px;
+  margin-right: -8px;
+  filter: grayscale(100%)
+}
+
+ul.rec-rating-cont > li {
+  display: inline-block;
+}
+
+ul.recommended-movies span.not-seen {
+  left: 10px;
+  position: absolute;
+  top: 10px;
+  font-size: 24px;
+}
+
+ul.recommended-movies span.watchlist {
+  right: 7px;
+  position: absolute;
+  top: 10px;
+  font-size: 24px;
+}
+
+ul.recommended-movies a {
+  color: #fff;
+  transition: .2s ease all;
+}
+
+ul.recommended-movies a:hover {
+  color: #FC7100;
+  transform: scale(1.2);
+}
+
+img.rate-color {
+  filter: grayscale(0%) !important;
+}
+
+div.added-to-watchlist {
+  position: absolute;
+  padding: 12px;
+  background-color: #1A1A1A;
+  border: 2px solid #282828;
+  text-align: center;
+  top: -55px;
+  display: none;
+  font-size: 15px;
+  right: -30px;
+  z-index: 9;
+  border-radius: 4px;
+  width: 100px;
+  line-height: 19px;
+}
+
+div.added-to-watchlist-match {
+  position: absolute;
+  padding: 12px;
+  background-color: #1A1A1A;
+  border: 2px solid #282828;
+  text-align: center;
+  top: -55px;
+  display: none;
+  font-size: 15px;
+  right: -30px;
+  z-index: 9;
+  border-radius: 4px;
+  width: 100px;
+  line-height: 19px;
+}
+
+div.logo-cont {
+  display: inline-block;
+}
+
+div.logo-cont img.logo {
+  height: 37px;
+}
+
+div.init-counter {
+  float: right;
+}
+
+div.init-counter h3 {
+  margin: 10px 0 0;
+
+}
+
+section.preferences {
+  display: inline-block;
+  width: 40%;
+  height: 400px;
+  overflow: scroll;
+  padding: 20px;
+  margin-bottom: 30px;
+  margin-right: 20px;
+  background: #282828;
+}
+
+section.preferences h2 {
+  font-size: 30px;
+  margin-bottom: 20px;
+  line-height: 34px;
+}
+
+section.preferences span.score {
+  color: #FC7100;
+  font-size:30px;
+  line-height: 34px;
 }
