--- a/public/views/directives/navbar.html
+++ b/public/views/directives/navbar.html
@@ -1,3 +1,6 @@
 <nav>
   <img class="logo" src="../images/matchflick-logo-v2-300x48-white.png" alt="" />
+  <div class="init-counter" ng-hide="initCounterShow">
+    <h3>{{initCounter}}/10</h3>
+  </div>
 </nav>
