--- a/public/views/get-started.html
+++ b/public/views/get-started.html
@@ -2,7 +2,8 @@
 <main class="getting-started">
   <div class="welcome">
     <h1>Getting Started</h1>
-    <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h4>
+    <h4>Thank you for using MatchFlick! Please go through the setup process so we can begin to know some of your movie preferences. You will first give us 5 movies that you enjoy, then we will ask you to rate 20 movies.
+      <br> Click begin to get started!</h4>
     <a ui-sref="favoriteMovies"><button class="default" type="button">Begin</button></a>
   </div>
 </main>
