moving to production

--- a/public/views/directives/movieDetailsRec.html
+++ b/public/views/directives/movieDetailsRec.html
@@ -1,7 +1,7 @@
 <div class="movie-details">
 <span show-movie-details class="glyphicon glyphicon-remove close-details" aria-hidden="true"></span>
 <div class="movie-details-poster">
-  <img ng-src="http://image.tmdb.org/t/p/w500/{{movie.posterUrl}}" />
+  <img ng-src="{{movie.posterUrl}}" />
   <div class="imdb-wrapper">
     <img src="http://ia.media-imdb.com/images/M/MV5BMTk3ODA4Mjc0NF5BMl5BcG5nXkFtZTgwNDc1MzQ2OTE@._V1_.png" class="imdb-logo" />
     <div class="rating-wrapper">
