--- a/public/views/init.html
+++ b/public/views/init.html
@@ -4,7 +4,7 @@
     <div class="welcome-cont">
       <div class="match-cont">
         <div class="movie-poster">
-          <img movie-details ng-src="http://image.tmdb.org/t/p/w500/{{recommendedMovie.posterUrl}}" />
+          <img movie-details ng-src="{{recommendedMovie.posterUrl}}" />
           <span class="overlay"><span show-movie-details class="glyphicon glyphicon-info-sign movie-details" aria-hidden="true"></span></span>
         </div>
         <div class="rating-cont">
