--- a/public/views/loading.html
+++ b/public/views/loading.html
@@ -1,2 +1,2 @@
 <navbar></navbar>
-<img class="loading" src="http://localhost:8080/images/spin.gif" />
+<img class="loading" src="http://159.203.169.243/images/spin.gif" />
