--- a/public/views/init.html
+++ b/public/views/init.html
@@ -14,18 +14,18 @@
             <div class="added-to-watchlist-match">
               <span>Added To Watchlist</span>
             </div>
-            <li><a id="rateOne" ratings ng-click="addToRatedOne(recommendedMovie)"><img src="http://localhost:8080/images/matchflick-emblem100x134.png" alt="" /></a></li>
-            <li><a id="rateTwo" ratings ng-click="addToRatedTwo(recommendedMovie)"><img src="http://localhost:8080/images/matchflick-emblem100x134.png" alt="" /></a></li>
-            <li><a id="rateThree" ratings ng-click="addToRatedThree(recommendedMovie)"><img src="http://localhost:8080/images/matchflick-emblem100x134.png" alt="" /></a></li>
-            <li><a id="rateFour" ratings ng-click="addToRatedFour(recommendedMovie)"><img src="http://localhost:8080/images/matchflick-emblem100x134.png" alt="" /></a></li>
-            <li><a id="rateFive" ratings ng-click="addToRatedFive(recommendedMovie)"><img src="http://localhost:8080/images/matchflick-emblem100x134.png" alt="" /></a></li>
+            <li><a id="rateOne" ratings ng-click="addToRatedOne(recommendedMovie)"><img src="http://159.203.169.243/images/matchflick-emblem100x134.png" alt="" /></a></li>
+            <li><a id="rateTwo" ratings ng-click="addToRatedTwo(recommendedMovie)"><img src="http://159.203.169.243/images/matchflick-emblem100x134.png" alt="" /></a></li>
+            <li><a id="rateThree" ratings ng-click="addToRatedThree(recommendedMovie)"><img src="http://159.203.169.243/images/matchflick-emblem100x134.png" alt="" /></a></li>
+            <li><a id="rateFour" ratings ng-click="addToRatedFour(recommendedMovie)"><img src="http://159.203.169.243/images/matchflick-emblem100x134.png" alt="" /></a></li>
+            <li><a id="rateFive" ratings ng-click="addToRatedFive(recommendedMovie)"><img src="http://159.203.169.243/images/matchflick-emblem100x134.png" alt="" /></a></li>
           </ul>
         </div>
       </div>
     </div>
   </div>
   <div class="loading" ng-show="initLoading">
-    <img src="http://localhost:8080/images/spin.gif" alt="" />
+    <img src="http://159.203.169.243/images/spin.gif" alt="" />
   </div>
 </main>
 <movie-details-template></movie-details-template>
