--- a/public/views/match.html
+++ b/public/views/match.html
@@ -18,11 +18,11 @@
             <div class="added-to-watchlist-match">
               <span>Added To Watchlist</span>
             </div>
-            <li><a id="rateOne" ratings ng-click="addToRatedOne(recommendedMovie)"><img src="http://localhost:8080/images/matchflick-emblem100x134.png" alt="" /></a></li>
-            <li><a id="rateTwo" ratings ng-click="addToRatedTwo(recommendedMovie)"><img src="http://localhost:8080/images/matchflick-emblem100x134.png" alt="" /></a></li>
-            <li><a id="rateThree" ratings ng-click="addToRatedThree(recommendedMovie)"><img src="http://localhost:8080/images/matchflick-emblem100x134.png" alt="" /></a></li>
-            <li><a id="rateFour" ratings ng-click="addToRatedFour(recommendedMovie)"><img src="http://localhost:8080/images/matchflick-emblem100x134.png" alt="" /></a></li>
-            <li><a id="rateFive" ratings ng-click="addToRatedFive(recommendedMovie)"><img src="http://localhost:8080/images/matchflick-emblem100x134.png" alt="" /></a></li>
+            <li><a id="rateOne" ratings ng-click="addToRatedOne(recommendedMovie)"><img src="http://159.203.169.243/images/matchflick-emblem100x134.png" alt="" /></a></li>
+            <li><a id="rateTwo" ratings ng-click="addToRatedTwo(recommendedMovie)"><img src="http://159.203.169.243/images/matchflick-emblem100x134.png" alt="" /></a></li>
+            <li><a id="rateThree" ratings ng-click="addToRatedThree(recommendedMovie)"><img src="http://159.203.169.243/images/matchflick-emblem100x134.png" alt="" /></a></li>
+            <li><a id="rateFour" ratings ng-click="addToRatedFour(recommendedMovie)"><img src="http://159.203.169.243/images/matchflick-emblem100x134.png" alt="" /></a></li>
+            <li><a id="rateFive" ratings ng-click="addToRatedFive(recommendedMovie)"><img src="http://159.203.169.243/images/matchflick-emblem100x134.png" alt="" /></a></li>
           </ul>
         </div>
       </div>
