removed local host

--- a/public/views/congratulations.html
+++ b/public/views/congratulations.html
@@ -3,7 +3,7 @@
   <div class="welcome">
     <h1>Good job!</h1>
     <h4>Now we know some of your movie tastes! You can continue to rate movies to help us better recommend movies that you would enjoy!</h4>
-    <a ui-sref="dashboard"><button class="default" type="button">Continue Matching</button></a>
+    <a ui-sref="match"><button class="default" type="button">Continue Matching</button></a>
     <a ui-sref="dashboard"><button class="default" type="button">Go To Dashboard</button></a>
   </div>
 </main>
