--- a/public/views/my-favorites.html
+++ b/public/views/my-favorites.html
@@ -14,11 +14,11 @@
 
   <section class="favorites-cont">
     <div class="flames">
-      <img src="http://localhost:8080/images/matchflick-emblem100x134.png" />
-      <img src="http://localhost:8080/images/matchflick-emblem100x134.png" />
-      <img src="http://localhost:8080/images/matchflick-emblem100x134.png" />
-      <img src="http://localhost:8080/images/matchflick-emblem100x134.png" />
-      <img src="http://localhost:8080/images/matchflick-emblem100x134.png" />
+      <img src="http://159.203.169.243/images/matchflick-emblem100x134.png" />
+      <img src="http://159.203.169.243/images/matchflick-emblem100x134.png" />
+      <img src="http://159.203.169.243/images/matchflick-emblem100x134.png" />
+      <img src="http://159.203.169.243/images/matchflick-emblem100x134.png" />
+      <img src="http://159.203.169.243/images/matchflick-emblem100x134.png" />
     </div>
     <ul class="movies-wrapper">
       <li ng-repeat="movie in ratedFive"><img ng-src="{{movie.posterUrl}}" /></li>
@@ -27,10 +27,10 @@
 
   <section class="favorites-cont">
     <div class="flames">
-      <img src="http://localhost:8080/images/matchflick-emblem100x134.png" />
-      <img src="http://localhost:8080/images/matchflick-emblem100x134.png" />
-      <img src="http://localhost:8080/images/matchflick-emblem100x134.png" />
-      <img src="http://localhost:8080/images/matchflick-emblem100x134.png" />
+      <img src="http://159.203.169.243/images/matchflick-emblem100x134.png" />
+      <img src="http://159.203.169.243/images/matchflick-emblem100x134.png" />
+      <img src="http://159.203.169.243/images/matchflick-emblem100x134.png" />
+      <img src="http://159.203.169.243/images/matchflick-emblem100x134.png" />
     </div>
     <ul class="movies-wrapper">
       <li ng-repeat="movie in ratedFour"><img ng-src="{{movie.posterUrl}}" /></li>
@@ -39,9 +39,9 @@
 
   <section class="favorites-cont">
     <div class="flames">
-      <img src="http://localhost:8080/images/matchflick-emblem100x134.png" />
-      <img src="http://localhost:8080/images/matchflick-emblem100x134.png" />
-      <img src="http://localhost:8080/images/matchflick-emblem100x134.png" />
+      <img src="http://159.203.169.243/images/matchflick-emblem100x134.png" />
+      <img src="http://159.203.169.243/images/matchflick-emblem100x134.png" />
+      <img src="http://159.203.169.243/images/matchflick-emblem100x134.png" />
     </div>
     <ul class="movies-wrapper">
       <li ng-repeat="movie in ratedThree"><img ng-src="{{movie.posterUrl}}" /></li>
