--- a/public/views/recommendations/recommendations.html
+++ b/public/views/recommendations/recommendations.html
@@ -15,11 +15,11 @@
         </div>
         <span show-rec-details class="glyphicon glyphicon-info-sign movie-details" aria-hidden="true"></span>
         <ul class="rec-rating-cont">
-          <li><a id="rateOne" ratings ng-click="addToRatedOne(movie)"><img src="http://localhost:8080/images/matchflick-emblem100x134.png" alt="" /></a></li>
-          <li><a id="rateTwo" ratings ng-click="addToRatedTwo(movie)"><img src="http://localhost:8080/images/matchflick-emblem100x134.png" alt="" /></a></li>
-          <li><a id="rateThree" ratings ng-click="addToRatedThree(movie)"><img src="http://localhost:8080/images/matchflick-emblem100x134.png" alt="" /></a></li>
-          <li><a id="rateFour" ratings ng-click="addToRatedFour(movie)"><img src="http://localhost:8080/images/matchflick-emblem100x134.png" alt="" /></a></li>
-          <li><a id="rateFive" ratings ng-click="addToRatedFive(movie)"><img src="http://localhost:8080/images/matchflick-emblem100x134.png" alt="" /></a></li>
+          <li><a id="rateOne" ratings ng-click="addToRatedOne(movie)"><img src="http://159.203.169.243/images/matchflick-emblem100x134.png" alt="" /></a></li>
+          <li><a id="rateTwo" ratings ng-click="addToRatedTwo(movie)"><img src="http://159.203.169.243/images/matchflick-emblem100x134.png" alt="" /></a></li>
+          <li><a id="rateThree" ratings ng-click="addToRatedThree(movie)"><img src="http://159.203.169.243/images/matchflick-emblem100x134.png" alt="" /></a></li>
+          <li><a id="rateFour" ratings ng-click="addToRatedFour(movie)"><img src="http://159.203.169.243/images/matchflick-emblem100x134.png" alt="" /></a></li>
+          <li><a id="rateFive" ratings ng-click="addToRatedFive(movie)"><img src="http://159.203.169.243/images/matchflick-emblem100x134.png" alt="" /></a></li>
         </ul>
     </span>
       <!-- <movie-details-rec id="show-rec-details"></movie-details-rec> -->
