--- a/public/views/directives/dashnav.html
+++ b/public/views/directives/dashnav.html
@@ -1,5 +1,5 @@
 <div class="logo-cont">
-  <img class="logo" src="../images/matchflick-logo-v2-300x48-white.png" alt="" />
+  <img class="logo" src="http://159.203.169.243/images/matchflick-logo-v2-300x48-white.png" alt="" />
 </div>
 <div class="user-info">
   <img class="profile" ng-src="{{currentUser._json.picture.data.url}}" />
