--- a/public/views/home.html
+++ b/public/views/home.html
@@ -2,7 +2,8 @@
 <main class="getting-started">
   <div class="welcome">
     <h1>Welcome to MatchFlick</h1>
-    <h4>MatchFlick is the best way to recommend a movie for your movie night! <br> Sign up for an account to let MatchFlick know what movies you like.</h4>
+   <h4>MatchFlick is the best way to recommend a movie for your movie night! <br> Sign up for an account to let MatchFlick know what movies you like.</h4>
+ <h4 style="color:red; margin-top:15px;">This application is still in beta. You may encounter bugs. </h4>
 
     <!-- <a href="/auth/facebook"><button class="default" type="button">Login</button></a> -->
     <a href="/auth/facebook"><img style="width:300px;" src="http://www.freeiconspng.com/uploads/facebook-sign-in-button-png-26.png" alt="" /></a>
