--- a/public/views/home.html
+++ b/public/views/home.html
@@ -2,6 +2,7 @@
 <main class="getting-started">
   <div class="welcome">
     <h1>Welcome to MatchFlick</h1>
+    {{test}}
    <h4>MatchFlick is the best way to recommend a movie for your movie night! <br> Sign up for an account to let MatchFlick know what movies you like.</h4>
  <h4 style="color:red; margin-top:15px;">This application is still in beta. You may encounter bugs. </h4>
 
