--- a/public/views/directives/dashnav.html
+++ b/public/views/directives/dashnav.html
@@ -2,9 +2,9 @@
   <img class="logo" src="http://159.203.169.243/images/matchflick-logo-v2-300x48-white.png" alt="" />
 </div>
 <div class="user-info">
-  <img class="profile" ng-src="{{currentUser._json.picture.data.url}}" />
+  <img class="profile" ng-src="{{currentUser.profilePictureUrl}}" />
   <p>
-    {{currentUser._json.first_name}}
-    {{currentUser._json.last_name}}
+    {{currentUser.firstName}}
+    {{currentUser.lastName}}
   </p>
 </div>
