--- a/public/views/match.html
+++ b/public/views/match.html
@@ -28,5 +28,9 @@
       </div>
     </div>
   </div>
+
+  <div class="loading" ng-show="loading">
+    <img src="../../images/spin.gif" alt="" />
+  </div>
 </main>
 <movie-details-template></movie-details-template>
