--- a/public/views/match.html
+++ b/public/views/match.html
@@ -30,7 +30,7 @@
   </div>
 
   <div class="loading" ng-show="loading">
-    <img src="../../images/spin.gif" alt="" />
+    <img src="http://loading.io/loader/?use=eyJzaXplIjo5Miwic3BlZWQiOjIsImNiayI6InJnYmEoMjU1LDI1NSwyNTUsMCkiLCJjMSI6IiNGQzcxMDAiLCJjMiI6IiNmZmZmZmYiLCJjMyI6IjYwIiwidHlwZSI6InJpbmctYWx0In0=" alt="" />
   </div>
 </main>
 <movie-details-template></movie-details-template>
